# amazon_scraper

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  resolver method.drawio  response.html  response_detail.html  torch_install.md
nginx/: nginx.conf
src/: main.py
src/apps/api/: router.py  urls.py
src/apps/products/: admin.py  models.py  serializers.py  urls.py  views.py  viewsets.py
src/apps/products/migrations/: 0001_initial.py
src/apps/scraper/: apps.py  models.py
src/apps/users/: admin.py  manager.py  models.py  serializers.py  viewsets.py
src/apps/users/migrations/: 0001_initial.py
src/core/: urls.py
src/core/settings/: base.py  development.py  production.py
src/services/resolver/: reader.py
src/services/scraper/: amazon.py  dump.py  extractor.py  runner.py
