[tool.poetry]
name = "amazon-api"
version = "0.1.0"
description = "Django + DRF Scraping Amazon Site"
authors = ["Feri Lukmansyah <47948861+perymerdeka@users.noreply.github.com>"]
readme = "README.md"

# ...
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.6"
djangorestframework = "^3.14.0"
httpx = "^0.25.0"
beautifulsoup4 = "^4.12.2"
fake-useragent = "^1.3.0"
loguru = "^0.7.2"
rich = "^13.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
